<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".viewclass.myprofile.MyProfileActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background">
    <include layout="@layout/toolbar_logout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:gravity="center">

        <TextView
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_myprofile_info"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="24sp"
            android:textStyle="italic"/>

        <Button
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="\nEstimate my Ranking\n"
            android:fontFamily="@font/comedysketchdemoregular"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:id="@+id/button_myProfile_myRanking"
            android:backgroundTint="@color/blue2"/>


        <Button
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="\nChange Profile\n"
            android:fontFamily="@font/comedysketchdemoregular"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:id="@+id/button_myProfile_changeProfile"
            android:backgroundTint="@color/blue2"/>

        <Button
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="\nGenerate QR Code\n"
            android:fontFamily="@font/comedysketchdemoregular"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:id="@+id/button_myProfile_generateQRCode"
            android:backgroundTint="@color/blue2"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/MyProfileImageView"
            android:scaleType="fitCenter"/>


    </LinearLayout>

</LinearLayout>