...
            android:text="Username"
            android:textStyle="bold|italic"
            android:textSize="16sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signin_username_editText"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Password"
            android:textStyle="bold|italic"
            android:textSize="16sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/signin_password_editText"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
...

            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_baseline_login_24"
                android:layout_weight="1"
                android:id="@+id/sign_in_button"
                app:iconPadding="0dp"
                android:padding="0dp"
                app:iconGravity="textStart"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="\u2386 QR CODE"
                android:textSize="16sp"
                android:id="@+id/sign_in_with_qrcode_button"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SIGN UP"
            android:textSize="16sp"
            android:id="@+id/signinactivity_sign_up_button"
            android:layout_gravity="center"/>
    </LinearLayout>

</LinearLayout>
