...
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText_changeProfile_firstName"
                android:fontFamily="@font/montserrat_regular"
                android:hint="First Name"
                android:inputType="textNoSuggestions"/>

        </com.google.android.material.textfield.TextInputLayout>

...
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText_changeProfile_lastName"
                android:fontFamily="@font/montserrat_regular"
                android:hint="Last Name"
                android:inputType="textNoSuggestions"/>

        </com.google.android.material.textfield.TextInputLayout>

...
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText_changeProfile_password"
                android:fontFamily="@font/montserrat_regular"
                android:inputType="textPassword"
                android:hint="New Password"/>

        </com.google.android.material.textfield.TextInputLayout>

...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="UPDATE"
            android:fontFamily="@font/comedysketchdemoregular"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:id="@+id/button_myProfile_update"
            android:backgroundTint="@color/blue2"/>


    </LinearLayout>


...
