<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".viewclass.myprofile.EstimateMyRankingActivity"
    android:orientation="vertical"
    android:background="@drawable/background">

    <include layout="@layout/toolbar_logout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/textView_estimateRanking"
            android:fontFamily="@font/montserrat_regular"
            android:layout_margin="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/textView_estimateRanking_exactRanking"
            android:fontFamily="@font/montserrat_regular"
            android:layout_margin="10dp" />

    </LinearLayout>

</LinearLayout>